# subset_CDM

./: LICENSE  README.md
controllers/: CMakeLists.txt
controllers/dist_subset/: CMakeLists.txt  dist_subset.cpp  dist_subset.h
controllers/leader_subset/: CMakeLists.txt  leader_subset.cpp  leader_subset.h
experiments/: dist_subset.argos  leader_subset.argos
loop_functions/: CMakeLists.txt
loop_functions/dscdm_loop_functions/: CMakeLists.txt  dscdm_loop_functions.cpp  dscdm_loop_functions.h
loop_functions/lscdm_loop_functions/: CMakeLists.txt  lscdm_loop_functions.cpp  lscdm_loop_functions.h
